<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="always" />

    <item
        android:id="@+id/change_language"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/change_lang"
        app:showAsAction="ifRoom" />

</menu>